# ROB320Lab7

./: CMakeLists.txt  README.md
10_type_erasure/: type_erasure.hpp  type_erasure_main.cpp
11_decorator/: decorator.hpp  decorator_main.cpp  value_based_dynamic_decorator.hpp  value_based_dynamic_decorator_main.cpp  value_based_static_decorator.hpp  value_based_static_decorator_main.cpp
12_singleton/: singleton.cpp  singleton.hpp  singleton_main.cpp
1_visitor/: shapes.hpp  variant_visitor.hpp  variant_visitor_main.cpp  visitor.hpp  visitor_main.cpp
2_strategy/: std_function_strategy.hpp  std_function_strategy_main.cpp  strategy.hpp  strategy_main.cpp
3_command/: command.hpp  command_main.cpp
4_adapter/: adapter.hpp  adapter_main.cpp
5_observer/: observer.hpp  observer_main.cpp
6_crtp/: concepts.hpp  concepts_main.cpp  crtp.hpp  crtp_main.cpp  crtp_mixin.hpp  crtp_mixin_main.cpp
7_bridge/: bridge.hpp  bridge_main.cpp
8_prototype/: prototype.hpp  prototype_main.cpp
9_external_polymorphism/: external_polymorphism.hpp  external_polymorphism_main.cpp
Lab7/: Makefile  example.json  my_robot.json  robot_parser  robot_parser.cpp  robot_parser.hpp  simple_parser  simple_parser.cpp  simple_parser.hpp
Lab7/Eigen/src/Core/: SelfAdjointView.h  Visitor.h
